# CMake-WSL2-TestProjekt

./: CMake-WSL2-TestProjekt.cpp  CMake-WSL2-TestProjekt.h  CMakeLists.txt
