# CMakeList.txt : CMake project for CMake-WSL2-TestProjekt, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CMake-WSL2-TestProjekt")

# Add source to this project's executable.
add_executable (CMake-WSL2-TestProjekt "CMake-WSL2-TestProjekt.cpp" "CMake-WSL2-TestProjekt.h")

# TODO: Add tests and install targets if needed.
